<resources>
    <string name="app_name">YouCook</string>
    <string name="dashboard">YouCook - Home</string>

    <!-- Drawer Menu String -->
    <string name="home">Home</string>

    <!--Login, Register Strings -->
    <string name="title_activity_login">Sign in</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_text">Sign in with a Google Account or with Email and Password:</string>
    <string name="register">Register</string>
    <string name="already_registered">If Already Registered Click Here</string>
    <string name="not_registered">Not Registered? Click Here</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="forgotten_password">Forgot Password?</string>
    <string name="forgotten_password_text">Enter your email and we will send you a link to reset it.</string>
    <string name="send_email">Send</string>
    <string name="back_to_login">Back to login? Click Here</string>


    <!-- Search Activity Strings -->
    <string name="search_menu">Search</string>
    <string name="search_menu_desc">Search for a recipe by entering ingredients</string>
    <string name="search_title">Search for a Recipe via Ingredients</string>
    <string name="ingredients_input">Ingredients Input:</string>
    <string name="search_hint_ingredients">E.g. Chicken, peppers, rice</string>
    <string name="trending">&#9733; Trending</string>
    <string name="highest_rated">Highest Rated &#9825;</string>
    <string name="search_help_title">Search Help (?)</string>
    <string name="search_help_text">To search for recipes: \n \n
    1. Select the text area \n \n
    2. Enter ingredients you have, separating them via a comma \n
        \t e.g. Chicken, Peppers, Rice \n \n
    3. Click the \'Search\' button \n \n
    4. Recipes with those ingredients will be retrieved!
    </string>
    <string name="list_recipes">List of Recipes</string>
    <string name="no_results">No Results, please go back and try a different search!</string>

    <!-- Shopping List Activity Strings -->
    <string name="shopping_list_menu">Shopping List</string>
    <string name="shopping_list_menu_desc">Create a shopping list of ingredients</string>
    <string name="action_add">Add</string>
    <string name="action_clear_all">Clear All Items</string>
    <string name="recipe_id_text">Recipe ID</string>
    <string name="recipe_publisher_text">Recipe Publisher</string>
    <string name="recipe_link_text">Recipe Link, click me if you want to copy me to forward to a friend</string>


    <!-- Recipe Activity Strings -->
    <string name="recipe_menu">Recipes</string>
    <string name="recipe_menu_desc">Create and Store your own recipes for later</string>
    <string name="recipe_add">Add Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_type">Course</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_method">Method</string>
    <string name="save">Save</string>
    <string name="save_next">Save and Move to Next Section</string>
    <string name="save_done">Save and Add to Recipes</string>
    <string name="view_recipes_title">View Your Recipes</string>
    <string name="view_recipes">Click on the type of Recipes you would like to view</string>
    <string name="hint_name">Enter Recipe Name</string>
    <string name="hint_ingredients">Enter Ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="hint_method">Enter Method, for example \n
    1. Cut peppers \n
    2. Fry peppers in oil on a low heat</string>
    <string name="method">Method</string>
    <string name="delete">Delete Recipe</string>
    <string name="new_recipe">New Recipe</string>
    <string name="prep_time">Preparation Time</string>
    <string name="prep_input">Enter Preparation Time</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="cooking_time_input">Enter Cooking Time</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="ingredient_help">Add the ingredients you need, you can leave areas blank if they are not required</string>
    <string name="no_recipes">No Recipes, please go back and try a different course type or add a recipe!</string>
    <!-- Spinner Array for Prep and Cook Time Unit -->
    <array name="time_unit">
        <item>Minutes</item>
        <item>Hours</item>
    </array>
    <!-- Spinner Array for Ingredient Unit -->
    <array name="ingredient_unit">
        <item>Unit:</item>
        <item>of Item</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Pounds</item>
        <item>Ounces</item>
        <item>Cups</item>
        <item>Tablespoon(s)</item>
        <item>Teaspoon(s)</item>
        <item>Litres</item>
        <item>Millilitres</item>
        <item>Pints</item>
        <item>Fluid Ounces</item>
        <item>Rashers</item>
        <item>Slices</item>
        <item>Zest</item>
        <item>Juice</item>
        <item>Cloves</item>
        <item>Pack(s)</item>
        <item>Bag(s)</item>
        <item>Sachet(s)</item>
    </array>
    <!-- Ingredient Title Values -->
    <string name="ingredient_one">Ingredient One</string>
    <string name="ingredient_two">Ingredient Two</string>
    <string name="ingredient_three">Ingredient Three</string>
    <string name="ingredient_four">Ingredient Four</string>
    <string name="ingredient_five">Ingredient Five</string>
    <string name="ingredient_six">Ingredient Six</string>
    <string name="ingredient_seven">Ingredient Seven</string>
    <string name="ingredient_eight">Ingredient Eight</string>
    <string name="ingredient_nine">Ingredient Nine</string>
    <string name="ingredient_ten">Ingredient Ten</string>
    <string name="ingredient_eleven">Ingredient Eleven</string>
    <string name="ingredient_twelve">Ingredient Twelve</string>
    <string name="ingredient_thirteen">Ingredient Thirteen</string>
    <string name="ingredient_fourteen">Ingredient Fourteen</string>
    <string name="ingredient_fifteen">Ingredient Fifteen</string>
    <string name="ingredient_sixteen">Ingredient Sixteen</string>
    <string name="ingredient_seventeen">Ingredient Seventeen</string>
    <string name="ingredient_eighteen">Ingredient Eighteen</string>
    <string name="ingredient_nineteen">Ingredient Nineteen</string>
    <string name="ingredient_twenty">Ingredient Twenty</string>

    <!-- Spinner Array for Course Type -->
    <array name="course_type">
        <item>Starter</item>
        <item>Main</item>
        <item>Dessert</item>
    </array>

    <!-- Starters Activity Strings -->
    <string name="starter">Starters</string>

    <!-- Mains Activity Strings -->
    <string name="main">Mains</string>

    <!-- Desserts Activity Strings -->
    <string name="dessert">Desserts</string>

    <!-- Timer Activity Strings -->
    <string name="timer_menu">Timer</string>
    <string name="timer_menu_desc">Set a timer so you don\'t burn the meal</string>
    <string name="time">00:00</string>
    <string name="time_start">Start</string>
    <string name="time_stop">Stop</string>
    <string name="time_input_button">Click Here to Enter Time</string>

    <!-- Converter Activity Strings -->
    <string name="converter_menu">Converter</string>
    <string name="converter_menu_desc">Convert measures to suit your scales</string>
    <string name="converter_input">Input Weight:</string>
    <string name="converter_output">Output Value:</string>
    <string name="converter_from">From:</string>
    <string name="converter_to">To:</string>
    <string name="converter">Convert</string>
    <string name="reset">Reset</string>
    <!-- Fragment Two - Fluids -->
    <string name="fluid_input">Input Volume:</string>
    <string name="fluid_output">Output Volume:</string>
    <!-- Spinner Array for Weight Conversion Types-->
    <array name="conversion_type">
        <item>Kilogram - Kg</item>
        <item>Gram - g</item>
        <item>Pound - lb</item>
        <item>Ounce - oz</item>
    </array>
    <!-- Spinner Array for Fluid Conversion Types-->
    <array name="fluid_type">
        <item>Litres - l</item>
        <item>Millilitres - ml</item>
        <item>Pints - pt</item>
        <item>Fluid Ounces - fl oz</item>
    </array>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="server_client_id">957827283600-u6aj6uave6l868ut0q7p96fghdter28i.apps.googleusercontent.com</string>

    <!-- Image Descriptions -->
    <string name="logo">YouCook Logo Image</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="food2fork">Powered by Food2Fork API</string>

    <!-- Delete Account Strings -->
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_text">Delete Your YouCook Account?</string>
    <string name="export">Export Recipes</string>
    <string name="export_text">Want your recipes exported before deletion? Use the button below to save all your recipes to Recipes.txt and you can use your phone connected to your pc via usb to get it!</string>


</resources>
