<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home">
    </item>
    </group>
    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp_dm"
        android:title="@string/search_menu">
    </item>
    <item
        android:id="@+id/shoppinglist"
        android:icon="@drawable/ic_list_black_24dp_dm"
        android:title="@string/shopping_list_menu">
    </item>
    <item
        android:id="@+id/recipes"
        android:icon="@drawable/ic_book_black_24dp_dm"
        android:title="@string/recipe_menu">
    </item>
    <item
        android:id="@+id/timer"
        android:icon="@drawable/ic_timer_black_24dp_dm"
        android:title="@string/timer_menu">
    </item>
    <item
        android:id="@+id/converter"
        android:icon="@drawable/ic_compare_arrows_black_24dp_dm"
        android:title="@string/converter_menu">
    </item>
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
    <item
        android:id="@+id/signout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/sign_out">
    </item>
    </group>
</menu>