<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ethannesbitt.youcook.ForgottenPassword"
    android:id="@+id/activity_forgot_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/youcookic_launcher"
            android:contentDescription="@string/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:text="@string/forgotten_password"
            android:fontFamily="@font/nunito"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgotten_password_text"
            android:fontFamily="@font/nunito"/>

        <EditText
            android:id="@+id/forgot_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito_extralight"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/send_email"
            android:background="@drawable/button_layout"
            android:textColor="@color/backgroundcolour" />

        <TextView
            android:id="@+id/return_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito_extralight"
            android:gravity="center"
            android:text="@string/back_to_login" />

    </LinearLayout>

</RelativeLayout>
