<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ethannesbitt.youcook.RecipeInformationTab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/recipeAddTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:gravity="center_horizontal"
            android:text="@string/new_recipe"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/recipe_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/recipeNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:hint="@string/hint_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/recipe_prep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/nunito"
            android:text="@string/prep_time"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/prep_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:hint="@string/prep_input"
                android:inputType="number"
                android:ems="10"/>

            <Spinner
                android:id="@+id/prep_time_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/time_unit">

            </Spinner>

        </LinearLayout>

        <TextView
            android:id="@+id/cooking_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/cooking_time"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cooking_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:hint="@string/cooking_time_input"
                android:inputType="number"
                android:ems="10"/>

            <Spinner
                android:id="@+id/cook_time_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/time_unit">

            </Spinner>

        </LinearLayout>

        <TextView
            android:id="@+id/recipeType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/recipe_type"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/recipeTypeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:entries="@array/course_type">
        </Spinner>

        <Button
            android:id="@+id/save_and_next_button_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/save_next"
            android:background="@drawable/button_layout"
            android:textColor="@color/backgroundcolour"
            android:layout_margin="10dp"/>

    </LinearLayout>

</ScrollView>