<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ethannesbitt.youcook.Timer"
    android:id="@+id/timer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/timecount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="100sp"
            android:textColor="@color/darkgrey"
            android:text="@string/time"
            android:gravity="center"
            android:layout_margin="100dp"/>

        <ToggleButton
            android:id="@+id/startstop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/time_start"
            android:textOn="@string/time_stop"
            android:layout_below="@+id/timecount"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/userinputbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startstop"
            android:layout_centerHorizontal="true"
            android:text="@string/time_input_button" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/timerdnav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/primary_text_material_dark"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_head"
        app:itemIconTint="@color/darkgrey"
        app:itemTextColor="@color/darkgrey"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
