<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ethannesbitt.youcook.Search"
    android:id="@+id/search">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito"
            android:gravity="center_horizontal"
            android:text="@string/search_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredients_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/ingredients_input"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <MultiAutoCompleteTextView
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/search_layout"
            android:hint="@string/search_hint_ingredients"
            android:inputType="text"
            android:padding="12dp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_layout"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/search_menu"
            android:textColor="@color/backgroundcolour" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/search_trending_button"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_layout"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/trending"
                android:textColor="@color/backgroundcolour" />

            <Button
                android:id="@+id/search_highestrated_button"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_layout"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/highest_rated"
                android:textColor="@color/backgroundcolour" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/help_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito"
            android:gravity="center_horizontal"
            android:text="@string/search_help_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/help_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/search_help_text"
            android:textStyle="bold" />

    </LinearLayout>

    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/searchdnav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/background_material_light"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_head"
        app:itemIconTint="@color/darkgrey"
        app:itemTextColor="@color/darkgrey"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
