<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ethannesbitt.youcook.RecipeMethodTab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/recipeMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/recipe_method"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/recipeMethodInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/nunito"
            android:hint="@string/hint_method"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/save_all_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/save_done"
            android:background="@drawable/button_layout"
            android:textColor="@color/backgroundcolour"
            android:layout_margin="10dp"/>

    </LinearLayout>
</ScrollView>