<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ethannesbitt.youcook.DisableAccount"
    android:id="@+id/activity_disable_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/youcookic_launcher"
            android:contentDescription="@string/logo"/>

        <TextView
            android:id="@+id/delete_account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/delete_account_text" />

        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/delete_account"
            android:background="@drawable/button_layout"
            android:textColor="@color/backgroundcolour" />

    </LinearLayout>

</RelativeLayout>
